--- a/src/styles.css
+++ b/src/styles.css
@@ -1,81 +1,4 @@
-* {
-  padding: 0;
-  margin: 0;
-}
 .App {
-  min-width: 250px;
-  padding: 1.3rem;
-}
-.list {
-  background-color: black;
-}
-.header {
+  font-family: sans-serif;
   text-align: center;
-}
-.search {
-  text-align: center;
-}
-.phone__header {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid #ccc;
-}
-.contact__list {
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem 0.1rem;
-}
-.phone {
-  padding: 1.5rem;
-}
-
-.add a {
-  text-decoration: none;
-  font-size: 45px;
-  font-weight: 700;
-  background: linear-gradient(to left, red, green, blue, orange);
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-}
-.add {
-  display: grid;
-  place-content: center;
-  position: fixed;
-  bottom: 50px;
-  right: 20px;
-  width: 60px;
-  height: 60px;
-  background-color: #fff;
-  box-shadow: 10px 10px 10px 10px #d6cece;
-  /* box-shadow: 10px 10px 10px #ded7d7; */
-  border-radius: 50%;
-}
-.create {
-  padding: 1rem;
-}
-input[type="text"] {
-  outline: none;
-  width: 90%;
-  margin: 1.1rem 0.5rem;
-  border: none;
-  border-bottom: 1px solid #cdc8c8;
-}
-input[type="submit"] {
-  background-color: #6c6a6a;
-  outline: none;
-  border: none;
-  font-size: 1rem;
-  padding: 0.5rem 1.1rem;
-  color: white;
-}
-.border__bottom {
-  border-bottom: 1px solid #cdc8c8;
-  margin: 3rem auto 1rem;
-}
-.create__logo {
-  margin: 1rem 2rem;
-  border-radius: 50%;
-  height: 200px;
-  width: 200px;
-  background-color: #cdc8c8;
 }
